--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,14 @@
 name: Test
-on: push
+on: 
+  workflow_dispatch
+    inputs:
+      greeting:
+        type: string
+        default: Hello
+        required: true
+        description: A cheerful words
 jobs:
-  test:
+  run:
     runs-on: ubuntu-latest
     steps: 
-      - run: echo "Hello, world. This is a test!!"
+      - run: echo "${{ inputs.greeting }}"
