--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,8 @@ on:
         required: true
         description: A cheerful words
 jobs:
-  run:
-    runs-on: ubuntu-latest
-    steps: 
-      - run: echo "${{ inputs.greeting }}"
+  manual:
+    run:
+      runs-on: ubuntu-latest
+      steps: 
+        - run: echo "${{ inputs.greeting }}"
