--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Manual
 on: 
   workflow_dispatch:
     inputs:
@@ -10,5 +10,5 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - run: echo "${{ inputs.greeting }}"
