--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,9 +4,6 @@ jobs:
   run:
     runs-on: ubuntu-latest
     env:
-      BRANCH: main
+      ACTOR: ${{ github.actor  }}
     steps:
-      - run: echo "${BRANCH}"
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ env.BRANCH }}
+      - run: echo "${ACTOR}"
